# Postform

./: .clang-tidy  .gdbinit  .gitignore  .gitmodules  CMakeLists.txt  Cargo.toml  LICENSE  Makefile  README.md  build.mk  expected_log.txt  openocd.cfg
.github/workflows/: host.yml  init-script.sh  main.yml  target_app.yml
app/: CMakeLists.txt  build.mk  gcc.ld  host.ld  memory.ld
app/inc/: format.h  logger.h  rtt.h  rtt_logger.h  rtt_writer.h  segger_rtt.h  uart_logger.h
app/inc/hal/: flash.h  gpio.h  rcc.h  systick.h  uart.h
app/inc/rtt/: cobs_writer.h  raw_writer.h  rtt.h  rtt_manager.h
app/src/: host_main.cpp  log.cpp  main.cpp  postform_config.cpp  rtt.cpp  rtt_logger.cpp  rtt_writer.cpp  segger_rtt.cpp  startup.cpp  uart_logger.cpp
app/src/hal/: systick.cpp
app/src/rtt/: cobs_writer.cpp  raw_writer.cpp  rtt.cpp  rtt_manager.cpp
buildconfig/: compiler.mk  gcc.mk
cmake/: cortex-m_atomics.cmake  cortex-m_hal.cmake  cortex-m_startup.cmake  ditto.cmake  googletest.cmake  libopencm3.cmake
cmake/toolchains/: armv6m.cmake  armv7m.cmake
deferred-logger-host/: Cargo.toml
deferred-logger-host/.cargo/: config.toml
deferred-logger-host/src/: lib.rs  main.rs
docs/: CONTRIBUTING.md
libpostform/: CMakeLists.txt  Doxyfile  build.mk  postform.ld  postform_zephyr.ld
libpostform/inc/postform/: args.h  config.h  file_logger.h  format_validator.h  logger.h  macros.h  rtt_logger.h  serial_logger.h  shared_types.hpp  types.h  utils.h
libpostform/inc/postform/rtt/: cobs_writer.h  raw_writer.h  rtt.h  rtt_manager.h  transport.h
libpostform/src/: file_logger.cpp  format_validator.cpp  macros.cpp  platform.cpp  rtt_logger.cpp
libpostform/src/rtt/: cobs_writer.cpp  raw_writer.cpp  rtt_manager.cpp  transport.cpp
libpostform/test/: logger_test.cpp  mock_logger.h  serial_logger_test.cpp  serial_transport_mock.h  timestamp_mock.cpp  timestamp_mock.h
postform-host/: Cargo.toml
postform-host/.cargo/: config.toml
postform-host/src/: lib.rs  main.rs  postform.rs
postform_decoder/: Cargo.toml  build.rs
postform_decoder/bindings/: shared_types.hpp
postform_decoder/src/: lib.rs  shared_types.rs
postform_persist/: Cargo.toml
postform_persist/src/: lib.rs  main.rs
postform_rtt/: Cargo.toml
postform_rtt/src/: lib.rs  main.rs
postform_serial/: Cargo.toml
postform_serial/src/: main.rs
xtask/: Cargo.toml
xtask/src/: main.rs
