[package]
name = "deferred-logger"
version = "0.1.0"
authors = ["Javier Alvarez <javier.alvarez@allthingsembedded.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
probe-rs = "0.9.0"
probe-rs-rtt = "0.4.0"
structopt = "0.3"
object = "0.22.0"
termion = "1.5.5"

