[package]
name = "postform_decoder"
version = "0.1.0"
authors = ["Javier Alvarez <javier.alvarez@allthingsembedded.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
object = "0.22"
strum_macros = "0.20"
thiserror = "1.0"
byteorder = "1.4.2"
