[package]
name = "postform_persist"
version = "0.4.0"
authors = ["Javier Alvarez <javier.alvarez@allthingsembedded.net>"]
description = "Decodes persistent logs for Postform, an efficient logging framework for mcu's"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/Javier-varez/Postform"
repository = "https://github.com/Javier-varez/Postform"
categories = ["embedded"]
keywords = ["embedded", "log", "logger"]
readme = "../README.md"
edition = "2021"

[dependencies]
postform_decoder = { path="../postform_decoder", version="0.4" }
structopt = "0.3"
thiserror = "1.0"
color-eyre = "0.5"
ctrlc = "3.1.7"
log = "0.4"
env_logger = "0.8"
colored = "2.0"
