[package]
name = "postform_rtt"
version = "0.3.0"
authors = ["Javier Alvarez <javier.alvarez@allthingsembedded.net>"]
description = "Decodes Rtt logs for Postform, an efficient logging framework for mcu's"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/Javier-varez/Postform"
repository = "https://github.com/Javier-varez/Postform"
categories = ["embedded"]
keywords = ["embedded", "log", "logger"]
readme = "../README.md"
edition = "2018"

[dependencies]
postform_decoder = { path="../postform_decoder", version="0.3" }
object = "0.22"
probe-rs = { git = "https://github.com/probe-rs/probe-rs", version = "0.10.0" }
gdb-server = { git = "https://github.com/probe-rs/probe-rs", version = "0.10.0" }
probe-rs-rtt = { git = "https://github.com/probe-rs/probe-rs-rtt", rev="35b51734dcf209bcaa6a30522d9dbce84e5187b2" }
structopt = "0.3"
rcobs = "0.1"
thiserror = "1.0"
color-eyre = "0.5"
ctrlc = "3.1.7"
log = "0.4"
env_logger = "0.8"
