[package]
name = "postform_rtt"
version = "0.4.0"
authors = ["Javier Alvarez <javier.alvarez@allthingsembedded.net>"]
description = "Decodes Rtt logs for Postform, an efficient logging framework for mcu's"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/Javier-varez/Postform"
repository = "https://github.com/Javier-varez/Postform"
categories = ["embedded"]
keywords = ["embedded", "log", "logger"]
readme = "../README.md"
edition = "2021"

[dependencies]
postform_decoder = { path="../postform_decoder", version="0.4" }
object = "0.22"
probe-rs = "0.11.0"
gdb-server = "0.11.0"
probe-rs-rtt = "0.11.0"
structopt = "0.3"
thiserror = "1.0"
color-eyre = "0.5"
ctrlc = "3.1.7"
log = "0.4"
env_logger = "0.8"
field-offset = "0.3.4"
